[gd_scene load_steps=18 format=3 uid="uid://3higeki8udsa"]

[ext_resource type="Script" uid="uid://dcjv1chnyxs37" path="res://Components/player/player.gd" id="1_smehm"]
[ext_resource type="PackedScene" uid="uid://ccc3gjo600wnd" path="res://Components/Components/HealthComponent/HealthComponent.tscn" id="2_tuyoq"]
[ext_resource type="PackedScene" uid="uid://ba2comoj2jbjy" path="res://Components/HUD/HUD.tscn" id="2_ur7pv"]
[ext_resource type="Script" uid="uid://dxy53bgkokdx0" path="res://Components/inventory/inventory.gd" id="2_y4r1p"]
[ext_resource type="PackedScene" uid="uid://c8xwid8c3180v" path="res://Components/Components/HitBoxComponent/HitboxComponent.tscn" id="3_fjrip"]
[ext_resource type="Script" uid="uid://b1oc161a3c6uo" path="res://z/playerSprite.gd" id="6_fjrip"]
[ext_resource type="Texture2D" uid="uid://bs3hgkqylvrf7" path="res://resources/textures/Player Skins/balls/balls generic.svg" id="7_ur7pv"]
[ext_resource type="Script" uid="uid://i0ebpvahkca5" path="res://Components/Components/ItemComponent/ItemComponent.gd" id="8_y4r1p"]
[ext_resource type="Resource" uid="uid://dpp708tku67u" path="res://resources/invItems/weapon.tres" id="9_d2wvv"]
[ext_resource type="Texture2D" uid="uid://c6bvhyawqa7ck" path="res://resources/textures/Player Skins/hands/hands generic.svg" id="9_y4r1p"]
[ext_resource type="Resource" uid="uid://duqd864m7ui1l" path="res://resources/invItems/trapper.tres" id="10_d2wvv"]
[ext_resource type="Resource" uid="uid://7ut2ts68hn2q" path="res://resources/invItems/weapon1.tres" id="10_f1ej7"]
[ext_resource type="Resource" uid="uid://dkbsecr3mbe0r" path="res://resources/invItems/wall_placer.tres" id="11_3v2ag"]
[ext_resource type="PackedScene" uid="uid://bccp86qgunv7a" path="res://Components/ammo_inventory/ammo_inventory.tscn" id="12_oprun"]
[ext_resource type="Script" uid="uid://qdxrmqwrtjl6" path="res://Scripts/username_handler.gd" id="13_jej6c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xral"]
radius = 54.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tuyoq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CollisionBox2D:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Sprite2D:self_modulate")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Sprite2D/hand1:self_modulate")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Sprite2D/hand2:self_modulate")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("usernameHandler/username:text")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:inputVel")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:pushVel")
properties/8/spawn = true
properties/8/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_smehm")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ur7pv")
script = ExtResource("6_fjrip")

[node name="hand1" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-99, -128)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_y4r1p")

[node name="hand2" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(99, -128)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_y4r1p")

[node name="HUD" parent="." instance=ExtResource("2_ur7pv")]
visible = false

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(100, 0)
script = ExtResource("2_y4r1p")
_content_array = Array[ExtResource("8_y4r1p")]([ExtResource("9_d2wvv"), ExtResource("10_d2wvv"), ExtResource("10_f1ej7"), null, ExtResource("11_3v2ag")])

[node name="AmmoInventory" parent="." instance=ExtResource("12_oprun")]

[node name="HealthComponent" parent="." instance=ExtResource("2_tuyoq")]
maxHealth = 100

[node name="HitboxComponent" parent="." instance=ExtResource("3_fjrip")]

[node name="CollisionBox2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_1xral")

[node name="CollisionBox2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1xral")

[node name="usernameHandler" type="Node2D" parent="."]
script = ExtResource("13_jej6c")

[node name="username" type="Label" parent="usernameHandler"]
offset_left = -152.0
offset_top = -134.0
offset_right = 148.0
offset_bottom = -92.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tuyoq")
